# MicrotubeDesignExplorer

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
plans/: 260710-ci-pages-release.md  260710-contracts-units-and-validity.md  260710-frontend-state-and-inputs.md  260710-handover-m3-core-port.md  260710-master-roadmap.md  260710-matlab-inventory-and-golden-data.md  260710-plot-registry-and-rendering.md  260710-pyodide-worker-bridge.md  260710-python-core-port.md  260710-report-and-export-system.md  260710-source-materials-rename.md  260710-validation-accessibility-performance.md  260711-post-release-backlog.md  260712-model-setup-ux.md  260712-plot-fidelity-review.md  260712-plot-visual-polish.md  260713-external-reader-copy.md  260713-github-gitlab-mirroring.md  260713-gitlab-pages-migration.md  260713-model-setup-category-tabs.md  260713-paper-repository-app-wiki.md  260713-results-order-and-license-details.md  260716-dimensionless-diagnostic-plots.md  _plan-template.md  (+1 more)
python/: README.md  pyproject.toml
python/microtubes_core/: __init__.py  api.py  contracts.py  defaults.py  parameter_manifest.py
python/microtubes_core/exports/: __init__.py  report.py
python/microtubes_core/models/: __init__.py  _array.py  capillary.py  correlations.py  cost.py  diagnostics.py  geometry.py  operating.py  pressure.py  resistances.py
python/microtubes_core/sweeps/: __init__.py  comparison.py  design_space.py  screens.py
(+270 files in other folders)
