[project]
name = "microtubes-core"
version = "0.1.0"
description = "Pure Python scientific core: microtube heat-exchanger design-space model ported from Waermedurchgang_V10_physical.m"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Philip Döbler" }]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["microtubes_core"]

[tool.pytest.ini_options]
testpaths = ["../tests/python"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "NPY", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["microtubes_core"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "microtubes_core.*"
disallow_untyped_defs = true
